--- a/translations/es_ES/now-reading-es_ES.po
+++ b/translations/es_ES/now-reading-es_ES.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: now-reading\n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2006-08-31 19:51+0100\n"
-"Last-Translator: Sansara <sansara@lume.org>\n"
+"PO-Revision-Date: 2006-12-23 02:37-0000\n"
+"Last-Translator: Rob Miller <r@robm.me.uk>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
